src/styles/style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

/* --- Body styles --- */
body {
    font-family: var(--font-text);
    color: var(--color-darkgray);
    background-color: var(--color-white);
    display: flex;
    flex-direction: column;
    position: relative;
    /* min-height: 100vh; */
    margin: 0;
}

.nav, .inf {
    background-color: var(--color-blue);
    position: relative;
    display: flex;
    align-items: center;
    padding: var(--padding-xxs-2);
    padding-left: var(--padding-s);
    padding-right: var(--padding-s);
    justify-content: space-between;
}

.nav{
    max-height: 5em;
}

.nav div {
    padding-right: var(--padding-s);
    justify-content: flex-start;
}

.nav ul {
    display: flex;
    list-style: none;
    align-items: center;
    justify-content: space-around;
    flex-direction: row;
    font-size: var(--font-size-content);
    padding: var(--padding-xxs);
    transition: all 0.3s ease;
}

.nav ul li a {
    font-family: var(--font-title);   
    color: var(--color-white);
    text-decoration: none;
    padding: var(--padding-xs);
}

.nav ul li a:hover {
    opacity: var(--opacity-white);
}

.nav-logo {
    max-width: 5em;
    padding: 0.3125em 0;
}

.menu-toggle {
    font-size: 2em;
    color: var(--color-white);
    background: none;
    border: none;
    cursor: pointer;
    display: none;
}

.footer-logo {
    max-width: 7.875em;
    margin: 0;
}

section {
    margin: var(--margin-s);
}

/* --- banner-top --- */

.banner-top {
    margin: 0;
    background: var(--img-banner-top);
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center;
    font-family: var(--font-title);
    color: var(--color-primary);
    padding: 25vh 3em!important;
    position: relative;
}

.banner-top::before {
    content: '';
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background: linear-gradient(to right, rgba(0, 0, 0, 0.9) 30%, rgba(0, 0, 0, 0) 70%);
    z-index: 1; 
    
  }

.banner-top div{
    position: relative;
    padding-bottom: var(--padding-s);
    z-index: 2;
}

.banner-top h1:first-of-type {
    font-size: var(--font-size-card-title);
    font-weight: 300;
    color: var(--color-white);
    
}

.banner-top h1:last-of-type {
    font-size: var(--font-size-title-main);
    font-weight: bold;
    color: var(--color-primary);

}

.banner-top p {
    font-family: var(--font-text);
    color: var(--color-white);

}

/* --- divider decorator --- */

.title-divider {
    width: 120px;
    height: 2px;
    background-color: var(--color-primary);
    border-radius: 50px;
    margin-bottom: var(--margin-s);
}

/* --- banner-bottom --- */

.banner-pre-footer {
    margin: 0;
    background: var(--img-banner-bottom);
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center;
    font-family: var(--font-title);
    color: var(--color-white);
    display: flex;
    align-items: center;
    justify-content: space-around;
    flex-direction: column;
    padding-top: 25vh !important;
    padding-bottom: 25vh !important;
    background-attachment: scroll !important;
    position: relative;
}

.banner-pre-footer::before {
    content: '';
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background: radial-gradient(circle, rgba(0, 0, 0, 0.8) 0%, rgba(0, 0, 0, 0) 70%);
    z-index: 1; 
  }

.banner-pre-footer div{
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    align-items: center;
    padding-bottom: var(--padding-s);
    color: var(--color-white);
    position: relative;
    z-index: 2;
}
.banner-pre-footer div:nth-child(2)  {
    padding: 0;
}

.banner-pre-footer h1:first-of-type {
    font-size: var(--font-size-card-title);
    font-weight: 300;
}

.banner-pre-footer h1:last-of-type {
    font-size: var(--font-size-title-main);
    font-weight: bold;
    color: var(--color-primary);
}

.banner-pre-footer p:first-of-type {
    font-family: var(--font-text);
    font-weight: bold;    
    color: var(--color-white);
}

.banner-pre-footer button, .banner-top button {
    border: 0.2em solid var(--color-grey);
    color: var(--color-white);
    cursor: pointer;
    padding: 1em 2.3em;
}

.banner-pre-footer button:hover, .banner-top button:hover{
    border: 0.2em solid var(--color-white);;
}

.inf {
    padding: var(--padding-s);
}

.copyright {
    border-top: solid 0.0625em var(--color-darkgray);
}

footer {
    flex-direction: column;
}

.footer-section {
    display: flex;
    justify-content: space-around;
    align-items: center;
    flex-direction: row;
    flex-wrap: wrap;
}

.footer-section-col {
    padding-top: var(--padding-s);
    padding-bottom: var(--padding-s);
    padding-left: var(--padding-xs);
    padding-right: var(--padding-xs);
}

.footer-section-col h3 {
    color: var(--color-secondary);
    font-size: var(--font-size-footer-title);
    font-family: var(--font-title);
    margin-bottom: var(--padding-xxs-2);
}

.footer-section-col ul {
    display: flex;
    list-style: none;
    align-items: flex-start;
    justify-content: space-around;
    flex-direction: column;
}

.footer-section-col ul li {
    padding-bottom: var(--padding-xxs-2);
}

.footer-section-col ul li a {
    font-family: var(--font-text);   
    font-size: var(--font-size-content);
    font-weight: bold;
    color: var(--color-grey);
    text-decoration: none;
}

.footer-section-col ul li a:hover {
    color: var(--color-white);
}

.newsletter {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

.newsletter form {
    justify-content: space-between;
    padding-top: var(--padding-xxs);
    padding-bottom: var(--padding-xs);
}

.newsletter form input,
button {
    background: none;
    resize: none;
    border: 0.0625em solid var(--color-grey);
    color: var(--color-grey);
    font-weight: bold;
    padding: var(--padding-xxs-2);
    box-sizing: border-box;
}

.newsletter form button {
    border: 0.0625em solid var(--color-primary);
    background-color: var(--color-primary);
    color: var(--color-white);
    cursor: pointer;
    transition: color .25s ease, background-color .25s ease, border-color .25s ease, box-shadow .25s ease, opacity .25s ease;
}

.newsletter form button:hover{
    border: 0.0625em solid var(--color-primary-hover);
    background-color: var(--color-primary-hover);
}

.fa-brands {
    max-width: 0.75em;
    cursor: pointer;
}

.footer-section-col .social-icons {
    padding-top: var(--padding-xxs);
}

.footer-section-col .social-icons a {    
    background-color: var(--color-grey);
    color: var(--color-primary);
    margin: var(--padding-xxs);
    padding: 0.3125em 0.5625em;
    border-radius: var(--border-btn-social-media);
}

.copyright p {
    color: var(--color-white);
    opacity: var(--opacity-white);
    font-size: var(--font-size-copyright);
    padding-bottom: 0.125em;
}

/* hamburger menu */

@media (max-width: 804px) {

    .menu-toggle {
        display: block;
        position: absolute;
        left: 1em;
    }

    .nav {
        display: flex;
        justify-content: center;
        align-items: center;
        position: relative;
    }

    .nav ul {
        display: none;
        position: absolute;        
        flex-direction: column;
        top: 0;
        left: 0;
        width: 30em;
        height: 100vh;
        background-color: var(--color-blue);
        justify-content: center;
        z-index: 100;
        transition: all 0.3s ease;
    }

    .nav ul.active {
        display: flex;
        position: fixed;
        background: var(--color-darkgray);
    }

    .nav a {
        display: flex;
        align-items: center;
        justify-content: center;
    }

    /* .footer-section {
        display: flex;
        justify-content: space-between;
        align-items: center;
        flex-direction: column;
    } */
}

